# chemkinReader

./: .gitignore  CMakeLists.txt  README  chemkinReader.bat  chemkinReader.sh  thermoParser.sh  transportParser.sh
src/: CMakeLists.txt  chemkinReader.cpp  chemkinReader.h  element.cpp  element.h  gpc_params.h  reaction.cpp  reaction.h  reactionParser.cpp  reactionParser.h  species.cpp  species.h  stringFunctions.cpp  stringFunctions.h  thermo.cpp  thermo.h  thermoParser.cpp  thermoParser.h  transport.cpp  transport.h  transportParser.cpp  transportParser.h
test/: chem.inp  chem_marinov.inp  chemkinReaderTest.cpp  easychem.inp  hardchem.inp  thermReaderTest.cpp  thermoParserTest.cpp  transportParserTest.cpp
